# arduino_pytwister

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-release.yml  python-testing.yml  test.yml
ArduinoPyTwisterFirmware/: ArduinoPyTwisterFirmware.ino
src/pytwister/: __init__.py  arduino.py  twister.py
tests/: test_arduino_twister.py  test_twister.py
